ecmascript/parser/tests/test262-error-references/fail/c939f8663a298a09.js.stderr
error: Unexpected token `static`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/test262-parser/fail/c939f8663a298a09.js:1:12
  |
1 | class A {a static(){}}
  |            ^^^^^^

